Unreleased

Added
    Control history duration on homepage
    Snapshot scheduling
    Filter events table by user & event name on frontend
    Support new network metric keys (#433)

Changed
    Use correct width for terminal on init
    Resize terminal on window resize
    Upgrade to bootstrap 5
    Remove operations from sidebar that are complete / failed older than 5 minutes (#407)
    Only admins can create projects (#429)
    Improve user parameter display on instance events
    Improve create project modal UI / UX
    Support limits when creating a project (#434)
    Show packets_dropped_outbound & packets_dropped_inbound on networks overview
    Support project limits on projects frontend
    Don't require filling out image when deploying cloud-config
    Support choosing project when deploying cloud-config
    Only allow choosing one host when deploying cloud-config (only on frontend)

Fixed
    First run doesn't toggle passwords properly (#390)
    Cant override users current project with HTTP header in "Universe"
    Cant create directory storage pool
    Cant use shells other than bash

0.13.0 - 18/07/2020

Added
    Setting for storing timezone (#371)
    Support for copying instances between projects (#375)
    Optionally copying profiles when copying instance
    Show image variants when searching images from remotes (#380)
    Support managing instance providers & their types (#395)
    Toggle admin status (#394)
    Toggle login status (#400)

Changed
    Store all dates in UTC (#370)
    Display dates in local browser time (#370)
    Run cron jobs at time specified by timezone setting (#372)

Fixed
    Enforcing backup retention limit
    Typo in the reset admin password docs (#410)
    Hosts that dont support projects break project analytics (#404)

Breaking API Changes
    Change response of GetInstanceTypes api

0.12.0 - 15/04/2020

Changed
    Instance's will now be deleted after a migration